--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,7 +24,7 @@ vars:
   microsoft_ads__search_passthrough_metrics: []
 models:
   microsoft_ads_source:
-    +schema: bingads_stg_dev
+    +schema: bingads_stg_prod
     +materialized: table
     tmp:
       +materialized: view
